--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <li class="botoes__items"><img src="img/Favoritos.svg" alt=""></li>
                         <li class="botoes__items"><img src="img/Sacola.svg" alt=""></li>
                     </ul>
-                    <a href="#" class="botoes__ora"anc>Saiba mais</a>
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
                 </div>
             </div>
         </div>
